--- a/index.html
+++ b/index.html
@@ -149,9 +149,25 @@
 										<li><a href="elements.html">Elements</a></li>
 										-->
 										<li>
-											<span class="opener">Seasons</span>
+											<span class="opener">2022-23</span>
 											<ul>
-												<li><a href="season_2022_23.html">2022-23</a></li>
+												<li><a href="season_2022_23_draft_analysis.html">Draft Analysis</a></li>
+												<li><a href="#">Week 1</a></li>
+												<li><a href="#">Week 2</a></li>
+												<li><a href="#">Week 3</a></li>
+												<li><a href="#">Week 4</a></li>
+												<li><a href="#">End of Season Stats</a></li>
+												<li><a href="#">Season Records</a></li>
+											</ul>
+											<span class="opener">2021-22</span>
+											<ul>
+												<li><a href="season_2022_23_draft_analysis.html">Draft Analysis</a></li>
+												<li><a href="#">Week 1</a></li>
+												<li><a href="#">Week 2</a></li>
+												<li><a href="#">Week 3</a></li>
+												<li><a href="#">Week 4</a></li>
+												<li><a href="#">End of Season Stats</a></li>
+												<li><a href="#">Season Records</a></li>
 											</ul>
 										</li>
 									</ul>
