--- a/index.html
+++ b/index.html
@@ -19,19 +19,6 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-
-							<!-- Header
-								   <header id="header">
-									   <a href="index.html" class="logo"><strong>Stats and Analytics</strong></a>
-									   <ul class="icons">
-										   <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										   <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										   <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										   <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										   <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									   </ul>
-								   </header>
-							-->
 							<!-- Banner -->
 							<section id="banner">
 								<div class="content">
@@ -41,18 +28,7 @@
 										</h1>
 										<p>Stats | Records | Analytics</p>
 									</header>
-									<!-- intro description
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
-										</ul>
-									-->
 								</div>
-								<!-- intro image
-								<span class="image object">
-									<img src="images/pic10.jpg" alt="" />
-								</span>
-								-->
 							</section>
 
 							<!-- Section -->
@@ -66,63 +42,24 @@
 
 							</section>
 
-							<!-- Section
+							<!-- Section -->
 							<section>
 								<header class="major">
-									<h2>Ipsum sed dolor</h2>
+									<h2>League Standings</h2>
 								</header>
-								<div class="posts">
-									<article>
-										<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-										<h3>Interdum aenean</h3>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
-										</ul>
-									</article>
-									<article>
-										<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-										<h3>Nulla amet dolore</h3>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
-										</ul>
-									</article>
-									<article>
-										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-										<h3>Tempus ullamcorper</h3>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
-										</ul>
-									</article>
-									<article>
-										<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-										<h3>Sed etiam facilis</h3>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
-										</ul>
-									</article>
-									<article>
-										<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-										<h3>Feugiat lorem aenean</h3>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
-										</ul>
-									</article>
-									<article>
-										<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-										<h3>Amet varius aliquam</h3>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
-										</ul>
-									</article>
-								</div>
+
+
 							</section>
-							-->
+
+							<!-- Section -->
+							<section>
+								<header class="major">
+									<h2>Last Week Summary</h2>
+								</header>
+
+
+							</section>
+
 						</div>
 					</div>
 
@@ -144,10 +81,6 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Home</a></li>
-										<!-- Sample pages
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										-->
 										<li>
 											<span class="opener">2022-23</span>
 											<ul>
@@ -159,58 +92,24 @@
 												<li><a href="#">End of Season Stats</a></li>
 												<li><a href="#">Season Records</a></li>
 											</ul>
-											<span class="opener">2021-22</span>
+										</li>
+										<li>
+											<span class="opener">Manager Stats</span>
 											<ul>
-												<li><a href="season_2022_23_draft_analysis.html">Draft Analysis</a></li>
-												<li><a href="#">Week 1</a></li>
-												<li><a href="#">Week 2</a></li>
-												<li><a href="#">Week 3</a></li>
-												<li><a href="#">Week 4</a></li>
-												<li><a href="#">End of Season Stats</a></li>
-												<li><a href="#">Season Records</a></li>
+												<li><a href="#">Dalton</a></li>
+												<li><a href="#">Damon</a></li>
+												<li><a href="#">Daniel</a></li>
+												<li><a href="#">Dustin</a></li>
+												<li><a href="#">Ethan</a></li>
+												<li><a href="#">Jon</a></li>
+												<li><a href="#">Michael</a></li>
+												<li><a href="#">Ross</a></li>
+												<li><a href="#">Seth</a></li>
+												<li><a href="#">Tevin</a></li>
 											</ul>
 										</li>
 									</ul>
 								</nav>
-
-							<!-- Section
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
-							-->
-							<!-- Section
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
-									</ul>
-								</section>
-							-->
 							<!-- Footer
 								<footer id="footer">
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
