--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									<h2>Recent Updates</h2>
 								</header>
 
-								<p>The 2022-23 Draft Analysis is here!</p>
+								<p>The <a href="season_2022_23_draft_analysis.html">2022-23 Draft Analysis</a> is here!</p>
 								<p>Summary stats by team along with overall stats from the draft. Is this data actually useful? Probably not. Can you use it to talk shit? Absolutely.</p>
 
 							</section>
