--- a/season_2022_23_week_1.html
+++ b/season_2022_23_week_1.html
@@ -22,11 +22,18 @@
 							<!-- Section -->
 							<section>
 								<header class="major">
-									<h2>Draft Analysis | 2022-23</h2>
+									<h2>Week 1 | 2022-23</h2>
 								</header>
 
-								<p><iframe width="800" height="600" src="https://datastudio.google.com/embed/reporting/df63c763-2290-4929-a809-78eb80e9dca0/page/TLB2C" frameborder="0" style="border:0" allowfullscreen></iframe></p>
-								
+								<h4>Scoreboard</h4>
+								<iframe width="375" height="450" src="https://datastudio.google.com/embed/reporting/f45df8aa-78c2-46a5-bbb8-6a825407ff6d/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<p></p>
+								<h4>Marvel's What if...</h4>
+								<iframe width="375" height="450" src="https://datastudio.google.com/embed/reporting/5de6211b-8836-4038-a564-9e298e6060ad/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<p></p>
+								<h4>Week 1 Awards</h4>
+								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/8c4e40f3-9a0a-476a-9f89-5360b8206b30/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+
 							</section>
 						</div>
 					</div>
