--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
 									<h2>Recent Updates</h2>
 								</header>
 
-								<p>The <a href="season_2022_23_draft_analysis.html">2022-23 Draft Analysis</a> is here!</p>
+
+								<h4><a href="season_2022_23_draft_analysis.html">The 2022-23 Draft Analysis is here!</a></h4>
 								<p>Summary stats by team along with overall stats from the draft. Is this data actually useful? Probably not. Can you use it to talk shit? Absolutely.</p>
+
+								<h4><a href="season_2022_23_week_1.html">Data for week 1 is now available.</a></h4>
+								<p>Scoreboard, weekly awards and Marvel's What if...</p>
 
 							</section>
 
@@ -48,18 +52,30 @@
 									<h2>League Standings</h2>
 								</header>
 
+								<iframe width="375" height="600" src="https://datastudio.google.com/embed/reporting/46881a15-f969-47b8-8007-709ea097603c/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+
 
 							</section>
 
 							<!-- Section -->
 							<section>
 								<header class="major">
-									<h2>Last Week Summary</h2>
+									<h2>Scoreboard</h2>
 								</header>
 
+								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/27344228-7376-48ae-8fec-9dc0d181ef83/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 							</section>
 
+							<!-- Section -->
+							<section>
+								<header class="major">
+									<h2>Season Awards and Records</h2>
+								</header>
+
+								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/8c4e40f3-9a0a-476a-9f89-5360b8206b30/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+							</section>
 						</div>
 					</div>
 
@@ -85,7 +101,7 @@
 											<span class="opener">2022-23</span>
 											<ul>
 												<li><a href="season_2022_23_draft_analysis.html">Draft Analysis</a></li>
-												<li><a href="#">Week 1</a></li>
+												<li><a href="season_2022_23_week_1.html">Week 1</a></li>
 												<li><a href="#">Week 2</a></li>
 												<li><a href="#">Week 3</a></li>
 												<li><a href="#">Week 4</a></li>
