--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
 								<header class="major">
 									<h2>Recent Updates</h2>
 								</header>
-
-
-								<h4><a href="season_2022_23_draft_analysis.html">The 2022-23 Draft Analysis is here!</a></h4>
-								<p>Summary stats by team along with overall stats from the draft. Is this data actually useful? Probably not. Can you use it to talk shit? Absolutely.</p>
-
-								<h4><a href="season_2022_23_week_1.html">Data for week 1 is now available.</a></h4>
+								<h4><a href="season_2022_23_week_2.html">Data for week 2 is now available.</a></h4>
 								<p>Scoreboard, weekly awards and Marvel's What if...</p>
 
 							</section>
@@ -76,6 +71,16 @@
 								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/8c4e40f3-9a0a-476a-9f89-5360b8206b30/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 							</section>
+
+							<!-- Section -->
+							<section>
+								<header class="major">
+									<h2>Marvel's What if...</h2>
+								</header>
+								<h4>Standings</h4>
+								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/03c14ff8-8e36-4468-9993-4dec11c19b8f/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+							</section>
 						</div>
 					</div>
 
@@ -102,7 +107,7 @@
 											<ul>
 												<li><a href="season_2022_23_draft_analysis.html">Draft Analysis</a></li>
 												<li><a href="season_2022_23_week_1.html">Week 1</a></li>
-												<li><a href="#">Week 2</a></li>
+												<li><a href="season_2022_23_week_2.html">Week 2</a></li>
 												<li><a href="#">Week 3</a></li>
 												<li><a href="#">Week 4</a></li>
 												<li><a href="#">End of Season Stats</a></li>
