--- a/season_2022_23_week_2.html
+++ b/season_2022_23_week_2.html
@@ -22,11 +22,18 @@
 							<!-- Section -->
 							<section>
 								<header class="major">
-									<h2>Draft Analysis | 2022-23</h2>
+									<h2>Week 2 | 2022-23</h2>
 								</header>
 
-								<p><iframe width="800" height="600" src="https://datastudio.google.com/embed/reporting/df63c763-2290-4929-a809-78eb80e9dca0/page/TLB2C" frameborder="0" style="border:0" allowfullscreen></iframe></p>
-								
+								<h4>Scoreboard</h4>
+								<iframe width="375" height="450" src="https://datastudio.google.com/embed/reporting/d44b3289-cdcc-4d45-af32-3e273cbfd93e/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<p></p>
+								<h4>Marvel's What if...</h4>
+								<iframe width="375" height="450" src="https://datastudio.google.com/embed/reporting/dc9aa87c-5120-4564-b47d-e1aa8af54801/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<p></p>
+								<h4>Awards</h4>
+								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/e2d1bab8-d87f-456a-afb0-b98fb27255fa/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+
 							</section>
 						</div>
 					</div>
