--- a/season_2022_23_week_1.html
+++ b/season_2022_23_week_1.html
@@ -31,7 +31,7 @@
 								<h4>Marvel's What if...</h4>
 								<iframe width="375" height="450" src="https://datastudio.google.com/embed/reporting/5de6211b-8836-4038-a564-9e298e6060ad/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
 								<p></p>
-								<h4>Week 1 Awards</h4>
+								<h4>Awards</h4>
 								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/8c4e40f3-9a0a-476a-9f89-5360b8206b30/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 							</section>
