--- a/index.html
+++ b/index.html
@@ -44,43 +44,31 @@
 							<!-- Section -->
 							<section>
 								<header class="major">
-									<h2>League Standings</h2>
-								</header>
-
-								<iframe width="375" height="600" src="https://datastudio.google.com/embed/reporting/46881a15-f969-47b8-8007-709ea097603c/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-
-							</section>
-
-							<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>Scoreboard</h2>
-								</header>
-
-								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/27344228-7376-48ae-8fec-9dc0d181ef83/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-							</section>
-
-							<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>Season Awards and Records</h2>
-								</header>
-
-								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/8c4e40f3-9a0a-476a-9f89-5360b8206b30/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-							</section>
-
-							<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>Marvel's What if...</h2>
+									<h2>Current Season</h2>
 								</header>
 								<h4>Standings</h4>
+								<iframe width="375" height="600" src="https://datastudio.google.com/embed/reporting/46881a15-f969-47b8-8007-709ea097603c/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<p></p>
+								<h4>Marvel's What if...</h4>
 								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/03c14ff8-8e36-4468-9993-4dec11c19b8f/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+								<p></p>
+								<h4>Power Rankings</h4>
+								<iframe width="375" height="600" src="https://datastudio.google.com/embed/reporting/dca24339-0f9e-4744-8b60-5ebb1693255c/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<p>*Note: Power rankings are determined by: Points Scored + (Points Scored * Winning %) + (Points Scored * Winning % if played vs the median score of the week)</p>
+								<p></p>
+								<h4>Playoff Odds</h4>
+								<iframe width="375" height="600" src="https://datastudio.google.com/embed/reporting/d9246c3e-b3d2-40e9-b1b7-4856637043ff/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<p>*Note: These odds are calculated purely from the history of each team's scores this year. It does not take projections or byes into account. It uses that data to run 10,000 monte carlo simulations of each matchup given a team's average score and standard deviation.</p>
+								<p>**Note: Power Rankings and Playoff Odds calculated at <a href="https://theffhub.com/" target="_blank">https://theffhub.com</a>. That site also has a schedule comparison and weekly matchup odds report, along with a playoff machine tool. Our league ID is 505332.</p>
+								<p></p>
+								<h4>Scoreboard</h4>
+								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/27344228-7376-48ae-8fec-9dc0d181ef83/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<p></p>
+								<h4>Season Awards</h4>
+								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/c99fd4fe-d954-40ef-ac97-8ce516a5f155/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<p></p>
 							</section>
+
 						</div>
 					</div>
 
