--- a/season_2022_23_week_1.html
+++ b/season_2022_23_week_1.html
@@ -54,7 +54,7 @@
 										<ul>
 											<li><a href="season_2022_23_draft_analysis.html">Draft Analysis</a></li>
 											<li><a href="season_2022_23_week_1.html">Week 1</a></li>
-											<li><a href="#">Week 2</a></li>
+											<li><a href="season_2022_23_week_2.html">Week 2</a></li>
 											<li><a href="#">Week 3</a></li>
 											<li><a href="#">Week 4</a></li>
 											<li><a href="#">End of Season Stats</a></li>
