--- a/season_2022_23_week_2.html
+++ b/season_2022_23_week_2.html
@@ -75,6 +75,13 @@
 											<li><a href="#">Tevin</a></li>
 										</ul>
 									</li>
+									<li>
+										<span class="opener">FF Tools</span>
+										<ul>
+											<li><a href="https://www.fantasycalc.com/database" target="_blank">Trade Database</a></li>
+											<li><a href="https://theffhub.com/" target="_blank">FF Hub</a></li>
+										</ul>
+									</li>
 								</ul>
 							</nav>
 						</div>
