--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<header class="major">
 									<h2>Recent Updates</h2>
 								</header>
-								<h4><a href="season_2022_23_week_3.html">Data for week 3 is now available.</a></h4>
+								<h4><a href="season_2022_23_week_4.html">Data for week 4 is now available.</a></h4>
 								<p>Scoreboard, weekly awards and Marvel's What if...</p>
 
 							</section>
@@ -97,7 +97,7 @@
 												<li><a href="season_2022_23_week_1.html">Week 1</a></li>
 												<li><a href="season_2022_23_week_2.html">Week 2</a></li>
 												<li><a href="season_2022_23_week_3.html">Week 3</a></li>
-												<li><a href="#">Week 4</a></li>
+												<li><a href="season_2022_23_week_4.html">Week 4</a></li>
 												<li><a href="#">End of Season Stats</a></li>
 												<li><a href="#">Season Records</a></li>
 											</ul>
