--- a/season_2022_23_draft_analysis.html
+++ b/season_2022_23_draft_analysis.html
@@ -50,6 +50,7 @@
 											<li><a href="season_2022_23_week_2.html">Week 2</a></li>
 											<li><a href="season_2022_23_week_3.html">Week 3</a></li>
 											<li><a href="season_2022_23_week_4.html">Week 4</a></li>
+											<li><a href="season_2022_23_week_5.html">Week 5</a></li>
 											<li><a href="#">End of Season Stats</a></li>
 											<li><a href="#">Season Records</a></li>
 										</ul>
