--- a/season_2022_23_week_6.html
+++ b/season_2022_23_week_6.html
@@ -22,18 +22,17 @@
 							<!-- Section -->
 							<section>
 								<header class="major">
-									<h2>Week 1 | 2022-23</h2>
+									<h2>Week 5 | 2022-23</h2>
 								</header>
 
 								<h4>Scoreboard</h4>
-								<iframe width="375" height="450" src="https://datastudio.google.com/embed/reporting/f45df8aa-78c2-46a5-bbb8-6a825407ff6d/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<iframe width="375" height="450" src="https://datastudio.google.com/embed/reporting/fd11cd7d-1e59-4176-851b-d581de9ae5ca/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe><p></p>
 								<p></p>
 								<h4>Marvel's What if...</h4>
-								<iframe width="375" height="450" src="https://datastudio.google.com/embed/reporting/5de6211b-8836-4038-a564-9e298e6060ad/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
+								<iframe width="375" height="450" src="https://datastudio.google.com/embed/reporting/e0e8d2e4-3348-43c4-b28b-2a77c4be191e/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe><p></p>
 								<p></p>
 								<h4>Awards</h4>
-								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/8c4e40f3-9a0a-476a-9f89-5360b8206b30/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/1ffa612d-daa6-4109-8464-d5e20371902b/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
 							</section>
 						</div>
 					</div>
@@ -58,7 +57,6 @@
 											<li><a href="season_2022_23_week_3.html">Week 3</a></li>
 											<li><a href="season_2022_23_week_4.html">Week 4</a></li>
 											<li><a href="season_2022_23_week_5.html">Week 5</a></li>
-											<li><a href="season_2022_23_week_6.html">Week 6</a></li>
 											<li><a href="#">End of Season Stats</a></li>
 											<li><a href="#">Season Records</a></li>
 										</ul>
