--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<header class="major">
 									<h2>Recent Updates</h2>
 								</header>
-								<h4><a href="season_2022_23_week_5.html">Data for week 5 is now available.</a></h4>
+								<h4><a href="season_2022_23_week_6.html">Data for week 6 is now available.</a></h4>
 								<p>Scoreboard, weekly awards and Marvel's What if...</p>
 
 							</section>
@@ -99,6 +99,7 @@
 												<li><a href="season_2022_23_week_3.html">Week 3</a></li>
 												<li><a href="season_2022_23_week_4.html">Week 4</a></li>
 												<li><a href="season_2022_23_week_5.html">Week 5</a></li>
+												<li><a href="season_2022_23_week_6.html">Week 6</a></li>
 												<li><a href="#">End of Season Stats</a></li>
 												<li><a href="#">Season Records</a></li>
 											</ul>
