--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<header class="major">
 									<h2>Recent Updates</h2>
 								</header>
-								<h4><a href="season_2022_23_week_8.html">Data for week 8 is now available.</a></h4>
+								<h4><a href="season_2022_23_week_9.html">Data for week 9 is now available.</a></h4>
 								<p>Scoreboard, weekly awards and Marvel's What if...</p>
 
 							</section>
@@ -102,6 +102,7 @@
 												<li><a href="season_2022_23_week_6.html">Week 6</a></li>
 												<li><a href="season_2022_23_week_7.html">Week 7</a></li>
 												<li><a href="season_2022_23_week_8.html">Week 8</a></li>
+												<li><a href="season_2022_23_week_9.html">Week 9</a></li>
 												<li><a href="#">End of Season Stats</a></li>
 												<li><a href="#">Season Records</a></li>
 											</ul>
