--- a/season_2022_23_week_1.html
+++ b/season_2022_23_week_1.html
@@ -61,6 +61,7 @@
 											<li><a href="season_2022_23_week_6.html">Week 6</a></li>
 											<li><a href="season_2022_23_week_7.html">Week 7</a></li>
 											<li><a href="season_2022_23_week_8.html">Week 8</a></li>
+											<li><a href="season_2022_23_week_9.html">Week 9</a></li>
 											<li><a href="#">End of Season Stats</a></li>
 											<li><a href="#">Season Records</a></li>
 										</ul>
