uploaded new index file
includes newly created and embedded tableau dashboard

--- a/index.html
+++ b/index.html
@@ -36,37 +36,14 @@
 								<header class="major">
 									<h2>Recent Updates</h2>
 								</header>
-								<h4><a href="season_2022_23_week_9.html">Data for week 9 is now available.</a></h4>
-								<p>Scoreboard, weekly awards and Marvel's What if...</p>
+								<h4>Data for week 1 is now available.</h4>
 
 							</section>
 
 							<!-- Section -->
 							<section>
-								<header class="major">
-									<h2>Current Season</h2>
-								</header>
-								<h4>Standings</h4>
-								<iframe width="375" height="600" src="https://datastudio.google.com/embed/reporting/46881a15-f969-47b8-8007-709ea097603c/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-								<p></p>
-								<h4>Marvel's What if...</h4>
-								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/03c14ff8-8e36-4468-9993-4dec11c19b8f/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-								<p></p>
-								<h4>Power Rankings</h4>
-								<iframe width="375" height="600" src="https://datastudio.google.com/embed/reporting/dca24339-0f9e-4744-8b60-5ebb1693255c/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-								<p>*Note: Power rankings are determined by: Points Scored + (Points Scored * Winning %) + (Points Scored * Winning % if played vs the median score of the week)</p>
-								<p></p>
-								<h4>Playoff Odds</h4>
-								<iframe width="375" height="600" src="https://datastudio.google.com/embed/reporting/d9246c3e-b3d2-40e9-b1b7-4856637043ff/page/RmX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-								<p>*Note: These odds are calculated purely from the history of each team's scores this year. It does not take projections or byes into account. It uses that data to run 10,000 monte carlo simulations of each matchup given a team's average score and standard deviation.</p>
-								<p>**Note: Power Rankings and Playoff Odds calculated at <a href="https://theffhub.com/" target="_blank">https://theffhub.com</a>. That site also has a schedule comparison and weekly matchup odds report, along with a playoff machine tool. Our league ID is 505332.</p>
-								<p></p>
-								<h4>Scoreboard</h4>
-								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/27344228-7376-48ae-8fec-9dc0d181ef83/page/d1X2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-								<p></p>
-								<h4>Season Awards</h4>
-								<iframe width="375" height="900" src="https://datastudio.google.com/embed/reporting/c99fd4fe-d954-40ef-ac97-8ce516a5f155/page/HxX2C" frameborder="0" style="border:0" allowfullscreen></iframe>
-								<p></p>
+								<div class='tableauPlaceholder' id='viz1694417481289' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;RK&#47;RK7X9TWSY&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;RK7X9TWSY' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;RK&#47;RK7X9TWSY&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>
+								<script type='text/javascript'>var divElement = document.getElementById('viz1694417481289'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.minWidth = '330px'; vizElement.style.maxWidth = '600px'; vizElement.style.width = '100%'; vizElement.style.minHeight = '610px'; vizElement.style.maxHeight = '910px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else if (divElement.offsetWidth > 500) { vizElement.style.minWidth = '330px'; vizElement.style.maxWidth = '600px'; vizElement.style.width = '100%'; vizElement.style.minHeight = '610px'; vizElement.style.maxHeight = '910px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1150px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
 							</section>
 
 						</div>
@@ -103,8 +80,6 @@
 												<li><a href="season_2022_23_week_7.html">Week 7</a></li>
 												<li><a href="season_2022_23_week_8.html">Week 8</a></li>
 												<li><a href="season_2022_23_week_9.html">Week 9</a></li>
-												<li><a href="#">End of Season Stats</a></li>
-												<li><a href="#">Season Records</a></li>
 											</ul>
 										</li>
 										<li>
